--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <div class="calculator">
-            <div class="calculator-display">
-
+            <div class="display-area">
+                <p class="display">0</p>
             </div>
             <div class="calculator-keys">
-                <button class="operator-plus">+</button>
-                <button class="operator-minus">-</button>
-                <button class="operator-times">*</button>
-                <button class="operator-divide">/</button>
-                <button class="number-one">1</button>
-                <button class="number-one">2</button>
-                <button class="number-one">3</button>
-                <button class="number-one">4</button>
-                <button class="number-one">5</button>
-                <button class="number-one">6</button>
-                <button class="number-one">7</button>
-                <button class="number-one">8</button>
-                <button class="number-one">9</button>
-                <button class="number-one">0</button>
-                <button class="number-one">.</button>
-                <button class="number-one">C</button>
-                <button class="number-one">=</button>
+                <button class=" number seven">7</button>
+                <button class="number eight">8</button>
+                <button class="number nine">9</button>
+                <button data-type="operator" class=" divide">/</button>
+                <button class="number four">4</button>
+                <button class="number five">5</button>
+                <button class="number six">6</button>
+                <button data-type="operator" class=" times">*</button>
+                <button class="number one">1</button>
+                <button class="number two">2</button>
+                <button class="number three">3</button>
+                <button data-type="operator" class=" plus">+</button>
+                <button class="number zero">0</button>
+                <button class="number comma">.</button>
+                <button class="number delete">AC</button>
+                <button data-type="operator" class=" minus">-</button>
+                <button data-type="operator" class=" equal">=</button>
             </div>
         </div>
     </div>
