adding some functionality to the code

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
                 <p class="display">0</p>
             </div>
             <div class="calculator-keys">
-                <button class=" number seven">7</button>
-                <button class="number eight">8</button>
-                <button class="number nine">9</button>
+                <button data-type="number" class=" number seven">7</button>
+                <button data-type="number" class="number eight">8</button>
+                <button data-type="number" class="number nine">9</button>
                 <button data-type="operator" class=" divide">/</button>
-                <button class="number four">4</button>
-                <button class="number five">5</button>
-                <button class="number six">6</button>
+                <button data-type="number" class="number four">4</button>
+                <button data-type="number" class="number five">5</button>
+                <button data-type="number" class="number six">6</button>
                 <button data-type="operator" class=" times">*</button>
-                <button class="number one">1</button>
-                <button class="number two">2</button>
-                <button class="number three">3</button>
+                <button data-type="number" class="number one">1</button>
+                <button data-type="number" class="number two">2</button>
+                <button data-type="number" class="number three">3</button>
                 <button data-type="operator" class=" plus">+</button>
-                <button class="number zero">0</button>
-                <button class="number comma">.</button>
-                <button class="number delete">AC</button>
+                <button data-type="number" class="number zero">0</button>
+                <button data-type="number" class="number comma">.</button>
+                <button data-type="operator" class="number delete">AC</button>
                 <button data-type="operator" class=" minus">-</button>
                 <button data-type="operator" class=" equal">=</button>
             </div>
