--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="calculator">
+    <main class="container">
+        <section class="calculator">
             <div class="display-area">
+                <p class="secondary-display"></p>
                 <p class="display">0</p>
             </div>
             <div class="calculator-keys">
-                <button data-type="number" class=" number seven">7</button>
-                <button data-type="number" class="number eight">8</button>
-                <button data-type="number" class="number nine">9</button>
-                <button data-type="operator" class=" divide">/</button>
-                <button data-type="number" class="number four">4</button>
-                <button data-type="number" class="number five">5</button>
-                <button data-type="number" class="number six">6</button>
-                <button data-type="operator" class=" times">*</button>
-                <button data-type="number" class="number one">1</button>
-                <button data-type="number" class="number two">2</button>
-                <button data-type="number" class="number three">3</button>
-                <button data-type="operator" class=" plus">+</button>
-                <button data-type="number" class="number zero">0</button>
-                <button data-type="number" class="number comma">.</button>
-                <button data-type="operator" class="number delete">AC</button>
-                <button data-type="operator" class=" minus">-</button>
-                <button data-type="operator" class=" equal">=</button>
+                <button data-type="number" class="seven">7</button>
+                <button data-type="number" class="eight">8</button>
+                <button data-type="number" class="nine">9</button>
+                <button data-type="operator" class="op divide">/</button>
+                <button data-type="number" class="four">4</button>
+                <button data-type="number" class="five">5</button>
+                <button data-type="number" class="six">6</button>
+                <button data-type="operator" class="op times">*</button>
+                <button data-type="number" class="one">1</button>
+                <button data-type="number" class="two">2</button>
+                <button data-type="number" class="three">3</button>
+                <button data-type="operator" class="op plus">+</button>
+                <button data-type="number" class="zero">0</button>
+                <button data-type="number" class="comma">.</button>
+                <button data-type="reset" class="delete">AC</button>
+                <button data-type="operator" class="op minus">-</button>
+                <button data-type="equal" class="op equal">=</button>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
 </body>
 </html>
