add some functions to the code and finishing the project

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main class="container">
         <section class="calculator">
             <div class="display-area">
-                <p class="secondary-display"></p>
-                <p class="display">0</p>
+                <p class="secondary-display">0</p>
+                <p class="display"></p>
             </div>
             <div class="calculator-keys">
                 <button data-type="number" class="seven">7</button>
